--- a/test/fixtures/reports.yml
+++ b/test/fixtures/reports.yml
@@ -1,3 +1,24 @@
+# == Schema Information
+#
+# Table name: reports
+#
+#  id            :integer          not null, primary key
+#  walk_date     :date
+#  dog           :string(255)
+#  time          :string(255)
+#  weather       :string(255)
+#  recap         :text
+#  pees          :string(255)
+#  poops         :string(255)
+#  energy        :string(255)
+#  vocalization  :string(255)
+#  overall       :string(255)
+#  created_at    :datetime
+#  updated_at    :datetime
+#  walk_time     :time
+#  walk_duration :integer
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
