--- a/test/fixtures/report_dogs.yml
+++ b/test/fixtures/report_dogs.yml
@@ -1,3 +1,14 @@
+# == Schema Information
+#
+# Table name: report_dogs
+#
+#  id         :integer          not null, primary key
+#  dog_id     :integer
+#  report_id  :integer
+#  created_at :datetime
+#  updated_at :datetime
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
