Take a shot at Puma

--- a/config/database.yml
+++ b/config/database.yml
@@ -10,4 +10,5 @@ development:
 
 production:
   adapter: postgresql
-  database: chasingtails_production
+  database: tails_production
+  host: localhost
