Organize Gemfile, Annotate

--- a/test/fixtures/reports.yml
+++ b/test/fixtures/reports.yml
@@ -17,6 +17,7 @@
 #  walk_duration :integer
 #  client_id     :integer
 #  uuid          :string(255)
+#  user_id       :integer
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
