--- a/test/fixtures/assets.yml
+++ b/test/fixtures/assets.yml
@@ -10,6 +10,7 @@
 #  picture_content_type :string(255)
 #  picture_file_size    :integer
 #  picture_updated_at   :datetime
+#  picture_id           :string(255)
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
