--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,6 @@
 # Rename this file to `.env` and add the following values.
 #  Do NOT check .env files in.
 ##########################################################
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-S3_BUCKET=
+export AWS_ACCESS_KEY_ID=
+export AWS_SECRET_ACCESS_KEY=
+export S3_BUCKET=
