--- a/test/fixtures/clients.yml
+++ b/test/fixtures/clients.yml
@@ -8,6 +8,7 @@
 #  address    :text
 #  created_at :datetime
 #  updated_at :datetime
+#  deleted_at :datetime
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
