--- a/test/fixtures/report_dogs.yml
+++ b/test/fixtures/report_dogs.yml
@@ -7,6 +7,7 @@
 #  report_id  :integer
 #  created_at :datetime
 #  updated_at :datetime
+#  deleted_at :datetime
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
