--- a/test/fixtures/reports.yml
+++ b/test/fixtures/reports.yml
@@ -18,6 +18,7 @@
 #  client_id     :integer
 #  uuid          :string(255)
 #  user_id       :integer
+#  deleted_at    :datetime
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
