Better walk displays for Clients and Users, added Walk.no_show

--- a/test/fixtures/reports.yml
+++ b/test/fixtures/reports.yml
@@ -19,6 +19,7 @@
 #  uuid          :string(255)
 #  user_id       :integer
 #  deleted_at    :datetime
+#  no_show       :boolean          default(FALSE)
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
