--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,4 @@ export AWS_ACCESS_KEY_ID=
 export AWS_SECRET_ACCESS_KEY=
 export S3_BUCKET=
 export AWS_DEFAULT_REGION=us-west-2
+export GOOGLE_MAPS_API_KEY=
