--- a/config/database.yml
+++ b/config/database.yml
@@ -1,17 +1,15 @@
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
-development:
+development: &default
   adapter: postgresql
+  encoding: unicode
   database: chasingtails_dev
-  host: localhost
+  pool: 5
+  username: postgres
+  password:
+  host: db
 
 test:
-  adapter: postgresql
+  <<: *default
   database: chasingtails_test
-  host: localhost
 
 production:
   host: localhost
