--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,8 @@
 version: '3'
 services:
   db:
-    image: postgres
+    # Match what is running in production
+    image: postgres:9.4
   web:
     build: .
     command: bundle exec rails s -p 3000 -b '0.0.0.0'
